adds new endpoint for get all cities history readinds and fixes query parameters missing
